--- a/src/app/basket-details/urgent-tax/urgent-tax.component.html
+++ b/src/app/basket-details/urgent-tax/urgent-tax.component.html
@@ -98,28 +98,28 @@
       <label class="col-form-label col-sm-4 font-weight-bold align-self-center">Step Procedure</label>
     </div>
     <div class="form-group row  pl-4 pr-5">
-      <label class="col-sm-5 col-form-label font-weight-bold">1. Check Summon</label>
-      <div class="col-sm-5">
+      <label class="col-sm-4 col-form-label font-weight-bold">1. Check Summon</label>
+      <div class="col-sm-8">
         <button class="bg-light-blue border-0 btn btn-lg text-white">Click Here</button>
       </div>
     </div>
     <div class="form-group row  pl-4 pr-5">
-      <label class="col-sm-5 col-form-label font-weight-bold">2. To Customer </label>
-      <div class="col-sm-7">
-        <button class="bg-light border-0 btn btn-lg form-group rounded-pill text-dark text-white" *ngIf="phoneNo">
+      <label class="col-sm-4 col-form-label font-weight-bold">2. To Customer </label>
+      <div class="col-sm-8">
+        <button class="bg-light border-0 btn mr-1 form-group rounded-pill text-dark text-white" *ngIf="phoneNo">
           <img class="pr-2" src="assets/img/icons/phone_icon.png" />{{phoneNo}}
         </button>
-        <button class="bg-light border-0 btn btn-lg form-group rounded-pill text-dark text-white" *ngIf="email">
+        <button class="bg-light border-0 btn mr-1 form-group rounded-pill text-dark text-white" *ngIf="email">
           <img class="pr-2" src="assets/img/icons/email.png" />{{email}}
         </button>
-        <button class="bg-light border-0 btn btn-lg form-group rounded-pill text-dark text-white" *ngIf="phoneNo">
+        <button class="bg-light border-0 btn form-group rounded-pill text-dark text-white" *ngIf="phoneNo">
           <img class="pr-2" src="assets/img/icons/sms.png" />SMS
         </button>
       </div>
     </div>
     <div class="form-group row  pl-4 pr-5">
-      <label class="col-sm-3 col-form-label font-weight-bold">3. Action</label>
-      <div class="col-sm-9">
+      <label class="col-sm-4 col-form-label font-weight-bold">3. Action</label>
+      <div class="col-sm-8">
         <select class="form-control w-75 form-group" formControlName="action"
           (ngModelChange)="onActionSelectorChanged($event)">
           <option disabled selected value=''>Select</option>
